--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.0",
+    "axios": "^1.13.2",
     "formik": "^2.4.9",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-redux": "^9.2.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
