--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.2.0",
     "react-intersection-observer": "^10.0.0",
     "react-redux": "^9.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tw-animate": "^1.0.3",
     "yup": "^1.7.1"
